2005-08-16  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.glade: revert the part of the previous patch that
	  modified the UI, as we are in UI freeze.

2005-08-15 Olaf Heiring <olh@suse.de>

	* gnome-about-me-password.c (read_everything): use integer to avoid
	  comparison being always true due to limited range.

2005-08-15 Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (update_password): use "wrapped" instead
	  of "one" to handler the case where the passwd command finds the
	  password wrapped. Use a long delay period.

	Patch by Jaap Hatsima. 

2005-08-14  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* gnome-about-me-password.c (update_password): Replace "passwod is
	to simple" with "Password is too simple".
	

2005-08-07  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (update_password): fix the rest of bug
	  312092 which was caused when the old and new passwords were the 
	  same.

2005-08-06  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me.c (about_me_setup_dialog): handle protocol errors
	  from EDS.
	
	This make the capplet not crash and fixes bug 312450, but the real
	problem is on EDS, not here.

2005-08-06  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (update_password): change signature and
	  handle error conditions from passwd.
	  (passdlg_process_response): adapt to changes in update_password
	  to show the error strings returned.
	
	Fixes bug 312092.

2005-08-06  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (gnome_about_me_password): avoid using
	  gtk_main and use gtk_dialog_run instead.
	  (passdlg_button_clicked_cb): rename to passdlg_process_response
	  (spawn_passwd): return a value, so that we can see if we need to
	  exit without using gtk_main_quit
	  (wait_child) avoid use of gtk_main_quit. More work is required on
	  this case, but for now it will be enough.

	Fixes bugs 312580 and 309736.	  	

2005-07-16  Diego Gonzaler <diego@pemas.net>
