@@ -1,3 +1,8 @@
+2005-11-21  Matthias Clasen  <mclasen@redhat.com>
+
+	* gnome-about-me.c: Add a preview to the filechooser used for
+	selecting an image, using a GnomeThumbnailFactory.
+
 2005-08-16  Diego Gonzalez  <diego@pemas.net>
 
 	* gnome-about-me.glade: revert the part of the previous patch that
